Styling to have hex value show all uppercase.

--- a/src/index.css
+++ b/src/index.css
@@ -201,6 +201,7 @@ input.error {
 .color-value {
   color: var(--clr-grey-1);
   margin-bottom: 0;
+  text-transform: uppercase;
 }
 .color-light .color-value {
   color: var(--clr-white);
