--- a/src/index.css
+++ b/src/index.css
@@ -210,6 +210,10 @@ input.error {
   color: var(--clr-white);
 }
 
+.color-light .alert {
+  color: var(--clr-white);
+}
+
 .alert {
   text-transform: uppercase;
   font-size: 0.85rem;
